--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,36 @@
 [project]
 name = "cruxml"
 version = "0.1.0"
-description = "Add your description here"
+description = "A minimal PyTorch-like deep learning library built from scratch for educational purposes"
 readme = "README.md"
 authors = [
     { name = "Jagjeevan Kashid", email = "jagjeevandev97@gmail.com" }
 ]
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "numpy>=1.24.0"
+]
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Education",
+    "Intended Audience :: Science/Research",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.12",
+    "Topic :: Scientific/Engineering :: Artificial Intelligence",
+    "Topic :: Education",
+]
+
+[project.optional-dependencies]
+visualization = [
+    "matplotlib>=3.5.0",
+    "graphviz>=0.20.0"
+]
+
+[project.urls]
+Homepage = "https://github.com/JagjeevanAK/CruxML"
+Repository = "https://github.com/JagjeevanAK/CruxML"
+Issues = "https://github.com/JagjeevanAK/CruxML/issues"
 
 [build-system]
 requires = ["hatchling"]
